--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
         "next": "13.4.12",
         "postcss": "8.4.27",
         "react": "18.2.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-countup": "^6.4.2",
         "react-dom": "18.2.0",
+        "react-syntax-highlighter": "^15.5.0",
+        "sonner": "^0.6.2",
         "tailwindcss": "3.3.3"
     },
     "devDependencies": {
